--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -49,6 +49,10 @@ cp builder.conf.default builder.conf
 # (make sure to leave no spaces around &#39;=&#39; sign!) 
 # NO_SIGN=&quot;1&quot;
 
+# Download all components:
+
+make get-sources
+
 # And now to build all Qubes rpms (this will take a few hours): 
 
 make qubes 
