--- a/HCL.html
+++ b/HCL.html
@@ -104,6 +104,12 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>Lenovo ThinkPad X220 (4290-W3W)<br /> (i5-2520M; QM67; HD3000; BIOS 1.39)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/5tNavg4MhT4/dFXsYHXOgu4J">​Matt Tracy</a></p>
 <p><strong>Desktop, Workstation and Server</strong></p>
 <p>HP Compaq dc7900 Convertible Minitower<br /> (E8400; Q45/Q43; BIOS 1.16)</p>
 <p>*</p>
