--- a/HCL.html
+++ b/HCL.html
@@ -104,6 +104,12 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>Lenovo Thinkpad T430s (2352CTO)<br /> (i5-3320M; Ivy Bridge; Intel HD graphics; BIOS 2.05)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Ll_pPP7glwI/jtRbKtQO_rMJ">​cprise</a></p>
 <p>Lenovo ThinkPad X220 (4290-W3W)<br /> (i5-2520M; QM67; HD3000; BIOS 1.39)</p>
 <p>Yes</p>
 <p>Yes</p>
