--- a/SourceCode.html
+++ b/SourceCode.html
@@ -1,13 +1,14 @@
 <h1 id="QubesSourceCodeRepositories">Qubes Source Code Repositories</h1>
-<p>All the Qubes code is kept in GIT repositories. We divided the project into several components, each of which has its own separate repository:</p>
+<p>All the Qubes code is kept in GIT repositories. We divided the project into several components, each of which has its own separate repository, some of them:</p>
 <ul>
-<li><code>core.git</code> -- the core Qubes infrastructure responsible for VM management, VM temaplates, fs sharing, etc.</li>
-<li><code>gui.git</code> -- GUI virtualization, both Dom0 and VM side.</li>
-<li><code>template-builder.git</code> - scripts and other files used to create Qubes templates and NetVM images.</li>
+<li><code>core-admin.git</code> -- the core Qubes infrastructure responsible for VM management, VM temaplates, fs sharing, etc.</li>
+<li><code>gui-daemon.git</code> -- GUI virtualization, Dom0 side.</li>
+<li><code>gui-agent-linux.git</code> -- GUI virtualization, Linux VM side.</li>
+<li><code>linux-template-builder.git</code> - scripts and other files used to create Qubes templates images.</li>
 </ul>
-<p>You can browse the repositories <a href="http://git.qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream</code> directory.</p>
+<p>You can browse the repositories <a href="http://git.qubes-os.org/gitweb/">​on line via GitWeb</a>. The Qubes official repositories are in the <code>mainstream-rX</code> directory, where X is release number (1, 2, etc).</p>
 <p>To clone a repository:</p>
-<pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream/&lt;repo_name&gt;.git &lt;repo_name&gt;</code></pre>
+<pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream-r2/&lt;repo_name&gt;.git &lt;repo_name&gt;</code></pre>
 <p>e.g.:</p>
-<pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream/core.git core</code></pre>
+<pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream-r2/core-admin.git core-admin</code></pre>
 <p>Currently the preferred way of contributing to the project is by sending a patch via the project's mailing list (<code>git format-patch</code>).</p>
