--- a/UserDoc.html
+++ b/UserDoc.html
@@ -12,7 +12,7 @@
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/KeyGen">Key generation inside Qubes VMs?</a></li>
 <li><a href="/wiki/wiki/AssigningDevices">How to assign PCI devices to a VM?</a></li>
-<li><a href="/wiki/wiki/BackupRestore">Qubes Backup/Restore/Migration</a></li>
+<li><a href="/wiki/wiki/BackupRestore">Qubes Backup, Restoration, and Migration</a></li>
 <li><a href="/wiki/wiki/QubesPolicies">Central policies for inter-VM services?</a></li>
 <li><a href="/wiki/wiki/NetworkPrinter">Configuring a network printer</a></li>
 <li><a href="/wiki/wiki/ResizeDiskImage">Resizing AppVMs and HVMs virtual disks</a></li>
