--- a/InstallationGuideR2B3.html
+++ b/InstallationGuideR2B3.html
@@ -62,6 +62,9 @@
 <ul>
 <li>Clocks might not get syncs in the VMs for up to several minutes after resume from sleep. This has been fixed in <code>qubes-core-dom0-linux</code> package &gt;= 2.0.4 -- please ensure you install updates after installation to resolve this issue.</li>
 </ul>
+<ul>
+<li>Gnome terminal window sometimes shrinks to minimal size (especially when opening new tab). The workaround is to disable its menubar and scrollbar.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
