--- a/HCL.html
+++ b/HCL.html
@@ -116,6 +116,12 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/5tNavg4MhT4/dFXsYHXOgu4J">​Matt Tracy</a></p>
+<p>Clevo P150EM (Sager NP9150)<br /> (i7-3720QM; HD4000; BIOS 4.6.5)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Most features work on 3.7 and 3.11, but for best results use 3.9.</p>
+<p><a href="https://groups.google.com/forum/#!topicsearchin/qubes-users/Clevo|sort:date|spell:true/qubes-users/Ol6v6xSla4Y">​AndrewX192</a></p>
 <p><strong>Desktop, Workstation and Server</strong></p>
 <p>HP Compaq dc7900 Convertible Minitower<br /> (E8400; Q45/Q43; BIOS 1.16)</p>
 <p>*</p>
