--- a/HCL.html
+++ b/HCL.html
@@ -38,40 +38,6 @@
 <p>Remarks</p>
 <p>Reported by</p>
 <p><strong>Laptop Devices</strong></p>
-<p>Lenovo Thinkpad T420s<br /> (i5-2520M; Sandy Bridge; Intel HD graphics)</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Qubes core developers</p>
-<p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>No</p>
-<p>Qubes core developers</p>
-<p>Samsung X460<br /> (P8600; PM45; GeForce 9200M GS; BIOS 06LY.M038.20091110.JIP)</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>No</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
-<p>Sony Vaio Z 12 <br /> (2010 edition)</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
-<p>Qubes core developers</p>
-<p>Dell Latitude E6420<br /> (i5-2520M; Sandy Bridge; Intel HD graphics; BIOS A17)</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p>Yes</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
 <p>Apple MacBookPro<br /> (i7 M620; GeForce GT 330M)</p>
 <p>Yes</p>
 <p>No</p>
@@ -87,11 +53,28 @@
 <p>No</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
+<p>Clevo P150EM (Sager NP9150)<br /> (i7-3720QM; HD4000; BIOS 4.6.5)</p>
+<p>*</p>
+<p>*</p>
+<p>Yes</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Most features work on 3.7 and 3.11, but for best results use 3.9.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Ol6v6xSla4Y/vFgIHeObF-8J">​AndrewX192</a></p>
 <p>Dell Latitude E4300 <br /> (P9600; GM45; GMA 4500MHD)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LNJqSbH0cOQ/VC9EwEDrXMQJ">​Pablo Costa</a></p>
+<p>Dell Latitude E6420<br /> (i5-2520M; Sandy Bridge; Intel HD graphics; BIOS A17)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
 <p>Dell Latitude E6430<br /> (i5-3340M; Ivy Bridge; Intel HD graphics; BIOS A11)</p>
 <p>*</p>
 <p>Yes</p>
@@ -104,6 +87,18 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p>Qubes core developers</p>
+<p>Lenovo Thinkpad T420s<br /> (i5-2520M; Sandy Bridge; Intel HD graphics)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Qubes core developers</p>
 <p>Lenovo Thinkpad T430s (2352CTO)<br /> (i5-3320M; Ivy Bridge; Intel HD graphics; BIOS 2.05)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -116,12 +111,20 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/5tNavg4MhT4/dFXsYHXOgu4J">​Matt Tracy</a></p>
-<p>Clevo P150EM (Sager NP9150)<br /> (i7-3720QM; HD4000; BIOS 4.6.5)</p>
+<p>Samsung X460<br /> (P8600; PM45; GeForce 9200M GS; BIOS 06LY.M038.20091110.JIP)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
-<p>Most features work on 3.7 and 3.11, but for best results use 3.9.</p>
-<p><a href="https://groups.google.com/forum/#!topicsearchin/qubes-users/Clevo|sort:date|spell:true/qubes-users/Ol6v6xSla4Y">​AndrewX192</a></p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
+<p>Sony Vaio Z 12 <br /> (2010 edition)</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
+<p>Qubes core developers</p>
 <p><strong>Desktop, Workstation and Server</strong></p>
 <p>HP Compaq dc7900 Convertible Minitower<br /> (E8400; Q45/Q43; BIOS 1.16)</p>
 <p>*</p>
