--- a/SoftwareUpdateDom0.html
+++ b/SoftwareUpdateDom0.html
@@ -1,24 +1,31 @@
-<h1 id="UpdatingsoftwareinDom0">Updating software in Dom0</h1>
-<h2 id="WhywouldonewanttoupdatesoftwareinDom0">Why would one want to update software in Dom0?</h2>
-<p>Normally there should be few reasons for updating software in Dom0. This is because there is no networking in Dom0, which means that even if some bugs will be discovered e.g. in the Dom0 Desktop Manager, this really is not a problem for Qubes, because all the 3rd party software running in Dom0 is not accessible from VMs or network in any way. Some exceptions to the above include: Qubes GUI daemon, Xen store daemon, and disk back-ends (we plan move the disk backends to untrusted domain in Qubes 2.0). Of course we believe this software is reasonably secure and we hope it will not need patching.</p>
-<p>However, we anticipate some other situations when updating Dom0 software might be required:</p>
+<h1 id="Updatingsoftwareindom0">Updating software in dom0</h1>
+<h2 id="Whywouldonewanttoupdatesoftwareindom0">Why would one want to update software in dom0?</h2>
+<p>Normally, there should be few reasons for updating software in dom0. This is because there is no networking in dom0, which means that even if some bugs are discovered e.g. in the dom0 Desktop Manager, this really is not a problem for Qubes, because none of the 3rd party software running in dom0 is accessible from VMs or the network in any way. Some exceptions to this include: Qubes GUI daemon, Xen store daemon, and disk back-ends. (We plan move the disk backends to an untrusted domain in Qubes 2.0.) Of course, we believe this software is reasonably secure, and we hope it will not need patching.</p>
+<p>However, we anticipate some other situations in which updating dom0 software might be necessary or desirable:</p>
 <ul>
 <li>Updating drivers/libs for new hardware support</li>
 <li>Correcting non-security related bugs (e.g. new buttons for qubes manager)</li>
 <li>Adding new features (e.g. GUI backup tool)</li>
 </ul>
-<h2 id="Howtodothat">How to do that?</h2>
-<p>Start a console in Dom0 and then run one of the following command:</p>
-<p>1) To check and install updates for Dom0 software:</p>
-<pre class="wiki"><code>$ sudo qubes-dom0-update</code></pre>
-<p>2) To install additional packages in Dom0 (usually not recommended):</p>
-<pre class="wiki"><code>$ sudo qubes-dom0-update anti-evil-maid</code></pre>
-<p>You can also pass --enablerepo= option in order to enable optional repositories (see yum configuration in Dom0). This is only for advanced users who really understand what they are doing.</p>
-<h3 id="Howtodowngradespecificpackage">How to downgrade specific package?</h3>
+<h2 id="Howtoupdatesoftwareindom0">How to update software in dom0</h2>
+<p>As of Qubes R2 Beta 3, the main update functions have been integrated into the Qubes VM Manager GUI: Simply select dom0 in the VM list, then click the <strong>Update VM system</strong> button (the blue, downward-pointing arrow). In addition, updating dom0 has been made more convenient: You will be prompted on the desktop whenever new dom0 updates are available and given the choice to run the update with a single click.</p>
+<p>Of course, command line tools are still available for accomplishing various update-related tasks (some of which are not available via Qubes VM Manager). In order to update dom0 from the command line, start a console in dom0 and then run one of the following commands:</p>
 <ol>
-<li><p>Download older version of package:</p>
+<li><p>To check and install updates for dom0 software:</p>
+<pre class="wiki"><code>$ sudo qubes-dom0-update</code></pre></li>
+</ol>
+<ol start="2">
+<li><p>To install additional packages in dom0 (usually not recommended):</p>
+<pre class="wiki"><code>$ sudo qubes-dom0-update anti-evil-maid</code></pre>
+<p>You may also pass the <code>--enablerepo=</code> option in order to enable optional repositories (see yum configuration in dom0). However, this is only for advanced users who really understand what they are doing.</p></li>
+</ol>
+<h3 id="Howtodowngradeaspecificpackage">How to downgrade a specific package</h3>
+<ol>
+<li><p>Download an older version of the package:</p>
 <pre class="wiki"><code>sudo qubes-dom0-update package-version</code></pre>
-<p>Yum will say that there is no update, but package will be downloaded to dom0.</p></li>
-<li><p>Downgrade packge:</p>
+<p>Yum will say that there is no update, but the package will nonetheless be downloaded to dom0.</p></li>
+</ol>
+<ol>
+<li><p>Downgrade the packge:</p>
 <pre class="wiki"><code>sudo yum downgrade package-version</code></pre></li>
 </ol>
