--- a/StickMounting.html
+++ b/StickMounting.html
@@ -1,40 +1,40 @@
-<p>In Qubes Beta 3 a new tool, <code></code><code>qvm-block</code><code></code> has been introduced that makes mounting USB devices to any user AppVM very easy, no matter which actual VM is handling the USB controller (those can be assigned using the <a href="/wiki/wiki/AssigningDevices">qvm-pci command</a>).</p>
-<p>In order to assign a USB disk to a VM, follow these steps:</p>
+<h1 id="HowtoMountUSBStickstoAppVMs">How to Mount USB Sticks to AppVMs</h1>
+<p>(<strong>Note:</strong> In the present context, the term &quot;USB stick&quot; denotes any <a href="https://en.wikipedia.org/wiki/USB_mass_storage_device_class">​USB mass storage device</a>. In addition to smaller flash memory sticks, this includes things like USB external hard drives.)</p>
+<p>Qubes supports the ability to mount a USB stick to any AppVM easily, no matter which VM actually handles the USB controller. (The USB controller may be assigned on the <strong>Devices</strong> tab of an AppVM's settings page in Qubes VM Manager or by using the <a href="/wiki/wiki/AssigningDevices">qvm-pci command</a>.)</p>
+<p>As of Qubes R2 Beta 3, USB stick mounting has been integrated into the Qubes VM Manger GUI. Simply insert your USB stick, right-click the desired AppVM in the Qubes VM Manager list, click <strong>Attach/detach block devices</strong>, and select your desired action and device.</p>
+<p>A command-line tool, <code>qvm-block</code>, is also available. This tool can be used to assign a USB stick to an AppVM as follows:</p>
 <ol>
 <li>Insert your USB stick.</li>
 </ol>
 <ol start="2">
-<li><p>In Dom0 konsole (running as normal user) do:</p>
+<li><p>In a dom0 console (running as normal user), list all available block devices:</p>
 <pre class="wiki"><code>qvm-block -l</code></pre></li>
 </ol>
 <blockquote>
-<p>This will list available block devices connected to any USB controller in your system, no matter in which VM this controller is hosted. The name of the VM hosting the USB controller is displayed before the colon in the device name. The string after the colon is the name of the device used within the VM.</p>
+<p>This will list all available block devices connected to any USB controller in your system, no matter in which VM hosts the controller. The name of the VM hosting the USB controller is displayed before the colon in the device name. The string after the colon is the name of the device used within the VM.</p>
 </blockquote>
 <blockquote>
-<p>NOTE: If your device is not listed here, you can refresh the list calling (from VM to which device is connected):</p>
+<p><strong>Note:</strong> If your device is not listed here, you may refresh the list by calling (from the VM to which device is connected):</p>
 <pre class="wiki"><code>sudo udevadm trigger --action=change</code></pre>
 </blockquote>
 <ol start="3">
-<li><p>Connect the device, e.g.:</p>
+<li><p>Connect the device to an AppVM:</p>
 <pre class="wiki"><code>qvm-block -a personal dom0:sda</code></pre>
-<p>NOTE: We have changed order of parameters in 1.0-rc1</p></li>
+<p><strong>Note:</strong> The order of these parameters was changed in Qubes 1.0-rc1.</p></li>
 </ol>
 <blockquote>
-<p>This will attach the device as &quot;/dev/xvdi&quot; in VM.</p>
+<p>This will attach the device as &quot;/dev/xvdi&quot; in the AppVM.</p>
 </blockquote>
 <ol start="4">
-<li>Open Nautilus file manager in the AppVM. Your stick should be visible in the &quot;Places&quot; panel on the left. Just click on the device.</li>
+<li>The USB stick is now attached to the AppVM. If using a default AppVM, you may open Nautilus file manager in the AppVM, and your stick should be visible in the <strong>Devices</strong> panel on the left.</li>
 </ol>
 <ol start="5">
-<li>When you finish using your USB stick, right-click its icon in Dolphin and chose &quot;Safely Remove &lt;Your stick name&gt;&quot;.</li>
+<li>When you finish using your USB stick, click the eject button or right-click and select <strong>Unmount</strong>.</li>
 </ol>
 <ol start="6">
-<li>Back to Dom0 konsole -- in order to unmount the stick do the following:</li>
+<li>In a dom0 console, unmount the stick:</li>
 </ol>
 <pre class="wiki"><code>qvm-block -d &lt;device&gt; &lt;vmname&gt;</code></pre>
 <ol start="6">
-<li>You can remove the device.</li>
+<li>You may now remove the device.</li>
 </ol>
-<blockquote>
-<p>In the next release this will get integrated into the Qubes GUI manager...</p>
-</blockquote>
