--- a/UserDoc.html
+++ b/UserDoc.html
@@ -4,6 +4,7 @@
 <li><a href="/wiki/wiki/GettingStarted">Getting Started</a></li>
 <li><a href="/wiki/wiki/HvmCreate">Creating and Using HVM and Windows Domains (Qubes R2 Only)</a></li>
 <li><a href="/wiki/wiki/WindowsAppVms">Installing and Using Windows-based AppVMs (Qubes R2 Beta 3 and Later)</a></li>
+<li><a href="/wiki/wiki/SecurityGuidelines">Security Guidelines</a></li>
 <li><a href="/wiki/wiki/CopyPaste">Copying and Pasting Between Domains</a></li>
 <li><a href="/wiki/wiki/CopyingFiles">Copying Files Between Domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and Adding New Software to AppVMs</a></li>
