--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,18 +1,24 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
 <p>Please send all the questions regarding Qubes to one of the following mailing lists. <strong>Please do not send questions to individual Qubes developers.</strong> By sending a message to the appropriate mailing list, you are not only giving others a chance to help you, but you may also be helping others by starting a public discussion about a shared problem or interest.</p>
-<h2 id="GeneralPostingAdvice">General Posting Advice</h2>
+<h2 id="MailingListRules">Mailing List Rules</h2>
+<ul>
+<li>Send your message to the correct list. Read the sections below to determine which list is correct for your message.</li>
+</ul>
+<ul>
+<li>Do not <a href="https://en.wikipedia.org/wiki/Posting_style">​top-post</a>.</li>
+</ul>
 <ul>
 <li>Include a precise and informative subject line. This will allow others to easily find your thread in the future and use it as a reference.
 <ul>
-<li>Example of a bad subject: &quot;Help! Qubes problems!&quot;</li>
-<li>Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer.&quot;</li>
+<li>Bad: &quot;Help! Qubes problems!&quot;</li>
+<li>Good: &quot;R2B2 Installation problem: Apple keyboard not working in installer.&quot;</li>
 </ul></li>
 </ul>
 <ul>
-<li>Be concise. Do not write an essay. Include only the essential information. Please think how many messages come to the list every day and whether people will want to read through your lengthy message (hint: they won't!)</li>
+<li>Be concise. Do not write an essay. Include only essential information. Please think about how many messages come to the list every day and whether people will want to read through your lengthy message (hint: they won't!).</li>
 </ul>
 <ul>
-<li>Do not apologize for your English. This is a waste of everyone's time, including your own. If we can't understand you, we will ask you to clarify (or ignore your message if it's a total mess ;).</li>
+<li>Do not apologize for your poor English. This is a waste of everyone's time, including your own. If we can't understand you, we will ask you to clarify (or ignore your message if it's a total mess ;).</li>
 </ul>
 <ul>
 <li>While we're generally open to hearing suggestions for new features, please note that we already have a pretty well defined <a href="/wiki/trac/roadmap">roadmap</a>, and it's rather unlikely that we will change our schedule in order to accommodate your request. If there's a particular feature you'd like to see in Qubes, a much more effective way to make it happen is to... contribute code to Qubes which implements it! We happily accept such contributions, provided they meet our standards. Please note, however, that it's always a good idea to field a discussion of your idea on the qubes-devel list before putting in a lot of hard work on something that we may not be able or willing to accept.</li>
