--- a/UserDoc/DispVMCustomization.html
+++ b/UserDoc/DispVMCustomization.html
@@ -1,13 +1,18 @@
 <h1 id="CustomizationofDisposableVM">Customization of Disposable VM</h1>
-<p>It is possible to change application settings for each new DispVM. This can be done by customizin DispVM template:</p>
+<p>It is possible to change the settings of each new Disposable VM (DispVM). This can be done by customizing the DispVM template:</p>
 <ol>
-<li><p>Start terminal in 'fedora-18-x64-dvm' VM (via command line, it is not listed in Qubes Manager nor system menu):</p>
+<li><p>Start a terminal in the <code>fedora-18-x64-dvm</code> TemplateVM by running the following command in a dom0 terminal. (By default, this TemplateVM is not shown in Qubes VM Manager. However, it can be shown by selecting &quot;Show/Hide internal VMs.&quot;)</p>
 <pre class="wiki"><code>qvm-run -a fedora-18-x64-dvm gnome-terminal</code></pre></li>
-<li>Change application settings (eg you can start firefox and change default search engine, install some plugins etc).</li>
-<li><p>Create empty /home/user/.qubes-dispvm-customized file:</p>
+<li>Change the VM's settings and/or applications, as desired. Note that currently Qubes supports exactly on DispVM template, so any changes you make here will affect all DispVMs. Some examples of changes you may want to make include:
+<ul>
+<li>Changing Firefox's default startup settings and homepage.</li>
+<li>Changing Nautilus' default file preview settings.</li>
+<li>Changing the DispVM's default NetVM. For example, you may wish to set the NetVM to &quot;none.&quot; Then, whenever you start a new DispVM, you can choose your desired ProxyVM manually (by changing the newly-started DipsVMs settings). This is useful if you sometimes wish to use a DispVM with a TorVM, for example. It is also useful if you sometimes wish to open untrusted files in a network-disconnected DispVM.</li>
+</ul></li>
+<li><p>Create an empty <code>/home/user/.qubes-dispvm-customized</code> file:</p>
 <pre class="wiki"><code>touch /home/user/.qubes-dispvm-customized</code></pre></li>
-<li>Shutdown the VM (either by poweroff from VM terminal, or qvm-shutdown from dom0 terminal).</li>
-<li><p>Regenerate DispVM template:</p>
+<li>Shutdown the VM (either by <code>poweroff</code> from VM terminal, or <code>qvm-shutdown</code> from dom0 terminal).</li>
+<li><p>Regenerate the DispVM template:</p>
 <pre class="wiki"><code>qvm-create-default-dvm --default-template --default-script</code></pre></li>
 </ol>
-<p><strong>Note:</strong> All above require at least qubes-core-vm &gt;= 2.1.2 installed in template.</p>
+<p><strong>Note:</strong> All of the above requires at least qubes-core-vm &gt;= 2.1.2 installed in template.</p>
