--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -20,3 +20,7 @@
 <li><a href="https://groups.google.com/d/msg/qubes-devel/KqZdbcgkTGU/YaTwNcQhcrgJ">​Qubes Security Bulletin #7</a></li>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/xj9KAW5inQc/YOrhOAQ7HU0J">​Qubes Security Bulletin #8</a></li>
 </ul>
+<h2 id="a2014">2014</h2>
+<ul>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/XgTo6L8-5XA/JLOadvBqnqMJ">​Qubes Security Bulletin #9</a></li>
+</ul>
