--- a/CopyPaste.html
+++ b/CopyPaste.html
@@ -15,3 +15,6 @@
 <p>And <a href="https://groups.google.com/group/qubes-devel/msg/48b4b532cee06e01">​this message</a> from qubes-devel.</p>
 <h2 id="Clipboardautomaticpolicyenforcement">Clipboard automatic policy enforcement</h2>
 <p>TODO</p>
+<h2 id="ShortcutConfiguration">Shortcut Configuration</h2>
+<p>The copy/paste shortcut is configurable in:</p>
+<pre class="wiki"><code>/etc/qubes/guid.conf</code></pre>
