--- a/CopyPaste.html
+++ b/CopyPaste.html
@@ -16,5 +16,5 @@
 <h2 id="Clipboardautomaticpolicyenforcement">Clipboard automatic policy enforcement</h2>
 <p>TODO</p>
 <h2 id="ShortcutConfiguration">Shortcut Configuration</h2>
-<p>The copy/paste shortcut is configurable in:</p>
+<p>The copy/paste shortcuts are configurable in:</p>
 <pre class="wiki"><code>/etc/qubes/guid.conf</code></pre>
