--- a/UserDoc/DispVMCustomization.html
+++ b/UserDoc/DispVMCustomization.html
@@ -3,7 +3,7 @@
 <ol>
 <li><p>Start a terminal in the <code>fedora-18-x64-dvm</code> TemplateVM by running the following command in a dom0 terminal. (By default, this TemplateVM is not shown in Qubes VM Manager. However, it can be shown by selecting &quot;Show/Hide internal VMs.&quot;)</p>
 <pre class="wiki"><code>qvm-run -a fedora-18-x64-dvm gnome-terminal</code></pre></li>
-<li>Change the VM's settings and/or applications, as desired. Note that currently Qubes supports exactly on DispVM template, so any changes you make here will affect all DispVMs. Some examples of changes you may want to make include:
+<li>Change the VM's settings and/or applications, as desired. Note that currently Qubes supports exactly one DispVM template, so any changes you make here will affect all DispVMs. Some examples of changes you may want to make include:
 <ul>
 <li>Changing Firefox's default startup settings and homepage.</li>
 <li>Changing Nautilus' default file preview settings.</li>
