--- a/HCL.html
+++ b/HCL.html
@@ -43,7 +43,7 @@
 <p>No</p>
 <p>No Network, Chipset doesn't support VT-d! <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
-<p>Apple MacBookPro<br /> (i5-3210M; Ivy Bridge; HD Graphics 4000)</p>
+<p>Apple MacBookPro<br /> (i5-3210M; Ivy Bridge; HD4000)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>No CPU VT-d support!? <a href="https://groups.google.com/d/topic/qubes-users/ZbjrseLxuPQ/discussion">​read more</a></p>
@@ -53,6 +53,13 @@
 <p>No</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
+<p>ASUS Zenbook UX31A<br /> (i7-3517U; Ivy Bridge; HD4000; BIOS UX31A.212)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Backlight keyboard keys not working. Only 4GB ram, but works.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/jlvKvKtEiWk/axMMx8St8xIJ">jeff</a></p>
 <p>Clevo P150EM (Sager NP9150)<br /> (i7-3720QM; HD4000; BIOS 4.6.5)</p>
 <p>*</p>
 <p>*</p>
@@ -105,12 +112,26 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ll_pPP7glwI/jtRbKtQO_rMJ">​cprise</a></p>
+<p>Lenovo Thinkpad T510<br /> (i5-520M; Arrandale; Intel HD Graphics; BIOS 6MET92WW 1.52)</p>
+<p>*</p>
+<p>No</p>
+<p>Yes</p>
+<p>No</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/UP9BK_yn-Pk/DR6PBVF4GlgJ">​pete</a></p>
 <p>Lenovo ThinkPad X220 (4290-W3W)<br /> (i5-2520M; QM67; HD3000; BIOS 1.39)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/5tNavg4MhT4/dFXsYHXOgu4J">​Matt Tracy</a></p>
+<p>Samsung NP300E7A<br /> (i3-2330M; HM65; HD3000)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/dzYwiYzvWYM/iOyq3V2y5L4J">​Marc</a></p>
 <p>Samsung X460<br /> (P8600; PM45; GeForce 9200M GS; BIOS 06LY.M038.20091110.JIP)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -119,6 +140,13 @@
 <p>Yes</p>
 <p>No</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
+<p>Sony VAIO series Z2 - VPCZ2190S<br /> (i5-2540M; Sandy Bridge; HD3000; BIOS R0170H5)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>BIOS has to be patched to activate VT-d, external Radeon HD 6700M</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/8urk8ZNeblg/jCD2iQyQQZwJ">​Danny Fullerton</a></p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
 <p>*</p>
 <p>Yes</p>
@@ -144,7 +172,7 @@
 <p>No</p>
 <p>Some video glitches, no audio hardware.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/1CyVEStoVCI/RTRw8-aalsUJ">​Nukama</a></p>
-<p>Lenovo ThinkCentre M71e<br /> (G620; H61; HD Graphics 2000; BIOS 9QKT29AUS)</p>
+<p>Lenovo ThinkCentre M71e<br /> (G620; H61; HD2000; BIOS 9QKT29AUS)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -153,6 +181,13 @@
 <p>No</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
 <p><strong>Motherboards</strong></p>
+<p>ASRock Q87M Vpro<br /> (LGA1150; Q87; BIOS P1.50)</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Problems with Power Saving, Audio and USB3</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/oExJBIDsAwQ/lwAzNNe7OcYJ">​suricabile</a></p>
 <p>Biostar A880GZ<br /> (AM3+; 880G/SB850)</p>
 <p>*</p>
 <p>*</p>
@@ -168,7 +203,7 @@
 <p>Yes</p>
 <p>No</p>
 <p><a href="/trac/ticket/762">#762</a></p>
-<p>Gigabyte GA-X79S-UP5 Wi-Fi<br /> (2011; C606; BIOS 1.0)</p>
+<p>Gigabyte GA-X79S-UP5 Wi-Fi<br /> (LGA2011; C606; BIOS 1.0)</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>VT-d option in BIOS according to <a href="http://download.gigabyte.eu/FileList/Manual/mb-manual_ga-x79s-up5_e.pdf">manual</a></p>
