--- a/HCL.html
+++ b/HCL.html
@@ -69,10 +69,14 @@
 <p>Yes</p>
 <p>Most features work on 3.7 and 3.11, but for best results use 3.9.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ol6v6xSla4Y/vFgIHeObF-8J">​AndrewX192</a></p>
-<p>Dell Latitude E4300 <br /> (P9600; GM45; GMA 4500MHD)</p>
+<p>Dell Latitude E4300 <br /> (P9600; GM45; GMA 4500MHD, BIOS A24)</p>
+<p>*</p>
+<p>No</p>
+<p>Yes</p>
+<p>No</p>
 <p>Yes</p>
 <p>Yes</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
+<p>Runs only with kernel 3.9 <a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LNJqSbH0cOQ/VC9EwEDrXMQJ">​Pablo Costa</a></p>
 <p>Dell Latitude E6420<br /> (i5-2520M; Sandy Bridge; Intel HD graphics; BIOS A17)</p>
 <p>Yes</p>
