--- a/BuildingArchlinuxTemplate.html
+++ b/BuildingArchlinuxTemplate.html
@@ -6,6 +6,10 @@
 <p>Change the following variables GIT_SUBDIR=marmarek DISTS_VM=archlinux</p>
 <h2 id="Getallrequiredsources">Get all required sources</h2>
 <pre class="wiki"><code>make get-sources</code></pre>
+<p>Note that make get-sources sometimes fails because it didn't download packages that are not used by archlinux such as xfce or kde packages.</p>
+<p>You can ignore the repositories that are failing by adding the following line to your builder.conf:</p>
+<pre class="wiki"><code>COMPONENTS:=$(filter-out desktop-linux-kde desktop-linux-xfce,$(COMPONENTS))</code></pre>
+<p>Just don't forget that you need to comment this line again if you want to build the whole Qubes-OS install CD.</p>
 <h2 id="Makeallrequiredqubescomponents">Make all required qubes components</h2>
 <p>The first use of the builder can take several hours depending on your bandwidth as it will install an archlinux chroot:</p>
 <pre class="wiki"><code>make vmm-xen-vm
@@ -26,6 +30,27 @@ make gui-agent-linux-vm</code></pre>
 <pre class="wiki"><code>ISO_VERSION=2013.06.01</code></pre>
 <p>You will also need to download the signature matching this ISO version inside qubes-src/linux-template-builder/scripts_archlinux/:</p>
 <pre class="wiki"><code>wget http://mir.archlinux.fr/iso/2013.06.01/archlinux-2013.06.01-dual.iso.sig</code></pre>
+<h2 id="Thenm-appletnetworkmanagericonfailstostartwhenarchlinuxisdefinedasatemplate-vm:">The nm-applet (network manager icon) fails to start when archlinux is defined as a template-vm:</h2>
+<p>In fact /etc/dbus-1/system.d/org.freedesktop.<a href="/wiki/wiki/NetworkManager">NetworkManager?</a>.conf does not allow a standard user to run network manager clients. To allow this, one need to change inside &lt;policy context=&quot;default&quot;&gt;:</p>
+<pre class="wiki"><code>&lt;deny send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
+<p>to</p>
+<pre class="wiki"><code>&lt;allow send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
+<h2 id="DispVMYumproxyandmostQubesaddonsthunderbird...havenotbeentestedatall.">DispVM, Yum proxy and most Qubes addons (thunderbird ...) have not been tested at all.</h2>
+<h2 id="ThesounddoesnotworkinAppVMsandtherearemessagesrelatedtopulsesegfaultinglibcwhenrunningdmesgFIXED">The sound does not work in AppVMs and there are messages related to pulse segfault in glibc when running dmesg (FIXED)</h2>
+<p>This is apparently a bug in Archlinux between glibc and pulseaudio package 4.0-6. The packages pulseaudio-4.0-2 and libpulse-4.0-2 are known to work and can be downloaded and reinstalled manually.</p>
+<h2 id="Errorwhenbuildingthegui-agent-linuxwithpulsecoreerror">Error when building the gui-agent-linux with pulsecore error</h2>
+<pre class="wiki"><code>module-vchan-sink.c:62:34: fatal error: pulsecore/core-error.h: No such file or directory
+ #include &lt;pulsecore/core-error.h&gt;</code></pre>
+<p>This error is because Archlinux update package too quickly. Probably, a new version of pulseaudio has been released, but the qubes team has not imported the new development headers yet.</p>
+<p>You can create fake new headers just by copying the old headers:</p>
+<pre class="wiki"><code>cd qubes-builder/qubes-src/gui-agent-linux/pulse
+ls
+cp -r pulsecore-#lastversion pulsecore-#archlinuxversion</code></pre>
+<p>You can check the current archlinux pulseaudio version like this:</p>
+<pre class="wiki"><code>sudo chroot chroot-archlinux/ pacman -Qi pulseaudio</code></pre>
+<h2 id="chroot-archlinuxdevptshasnotbeenunmounted">chroot-archlinux/dev/pts has not been unmounted</h2>
+<p>This is a known problem when there are errors during building. Check what is mounted using the command mount (with no parameters). Just unmount what you can (or reboot your vm if you are too lazy :) )</p>
+<h1 id="KnownproblemsinQubesR2-B2">Known problems in Qubes R2-B2</h1>
 <h2 id="xen-vmm-vmfailtobuildwithaPARSETUPLErelatederrorFIXED:">xen-vmm-vm fail to build with a PARSETUPLE related error (FIXED):</h2>
 <p>Commenting out &quot;#define HAVE_ATTRIBUTE_FORMAT_PARSETUPLE&quot; from chroot_archlinux/usr/include/python2.7/pyconfig.h fixes the problem, but it isn't the right solution [1]...</p>
 <p>A better fix is planned for the next python release (the bug is considered release blocking), and will be updated in archlinux chroot as soon as available.</p>
@@ -76,26 +101,6 @@ sudo sed &#39;s:qubes-vm-type:qubes_vm_type:g&#39; -i /usr/bin/qubes-session
 sudo sed &#39;s:qubes-vm-updateable:qubes_vm_updateable:g&#39; -i /usr/bin/qubes-session</code></pre>
 <p>Do not forgot to:</p>
 <pre class="wiki"><code>umount /mnt/vm</code></pre>
-<h2 id="Thenm-appletnetworkmanagericonfailstostartwhenarchlinuxisdefinedasatemplate-vm:">The nm-applet (network manager icon) fails to start when archlinux is defined as a template-vm:</h2>
-<p>In fact /etc/dbus-1/system.d/org.freedesktop.<a href="/wiki/wiki/NetworkManager">NetworkManager?</a>.conf does not allow a standard user to run network manager clients. To allow this, one need to change inside &lt;policy context=&quot;default&quot;&gt;:</p>
-<pre class="wiki"><code>&lt;deny send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
-<p>to</p>
-<pre class="wiki"><code>&lt;allow send_destination=&quot;org.freedesktop.NetworkManager&quot;/&gt;</code></pre>
-<h2 id="DispVMYumproxyandmostQubesaddonsthunderbird...havenotbeentestedatall.">DispVM, Yum proxy and most Qubes addons (thunderbird ...) have not been tested at all.</h2>
 <h2 id="Installingthetemplateindom0failsbecauseofamissingdependencyqubes-core-dom0-linux">Installing the template in dom0 fails because of a missing dependency (qubes-core-dom0-linux)</h2>
 <p>Again you built a template based on a recent Qubes API which has not been released yet. So skip the dependency for now:</p>
 <pre class="wiki"><code>sudo rpm -U --nodeps yourpackage.rpm</code></pre>
-<h2 id="chroot-archlinuxdevptshasnotbeenunmounted">chroot-archlinux/dev/pts has not been unmounted</h2>
-<p>This is a known problem when there are errors during building. Just unmount what you can (or reboot your vm if you are too lazy :) )</p>
-<h2 id="Errorwhenbuildingthegui-agent-linux">Error when building the gui-agent-linux</h2>
-<pre class="wiki"><code>module-vchan-sink.c:62:34: fatal error: pulsecore/core-error.h: No such file or directory
- #include &lt;pulsecore/core-error.h&gt;</code></pre>
-<p>This error is because Archlinux update package too quickly. Probably, a new version of pulseaudio has been released, but the qubes team has not imported the new development headers yet.</p>
-<p>You can create fake new headers just by copying the old headers:</p>
-<pre class="wiki"><code>cd qubes-builder/qubes-src/gui-agent-linux/pulse
-ls
-cp -r pulsecore-#lastversion pulsecore-#archlinuxversion</code></pre>
-<p>You can check the current archlinux pulseaudio version like this:</p>
-<pre class="wiki"><code>sudo chroot chroot-archlinux/ pacman -Qi pulseaudio</code></pre>
-<h2 id="ThesounddoesnotworkinAppVMsandtherearemessagesrelatedtopulsesegfaultinglibcwhenrunningdmesg">The sound does not work in AppVMs and there are messages related to pulse segfault in glibc when running dmesg</h2>
-<p>This is apparently a bug in Archlinux pulseaudio package 4.0-6. The packages pulseaudio-4.0-2 and libpulse-4.0-2 are known to work and can be downloaded and reinstalled manually.</p>
