--- a/FedoraTemplateUpgrade.html
+++ b/FedoraTemplateUpgrade.html
@@ -15,3 +15,13 @@ qvm-block -A fedora-20-x64 dom0:/var/tmp/template-upgrade-cache.img</code></pre>
 sudo mount /dev/xvdi /mnt/removable
 sudo yum --releasever=20 --setopt=cachedir=/mnt/removable distro-sync</code></pre>
 <p>After upgrade is finished, you can remove /var/tmp/template-upgrade-cache.img file.</p>
+<h1 id="Compactingtemplatesroot.img">Compacting templates root.img</h1>
+<p>fstrim, nor &quot;discard&quot; mount option do not work on template root fs, so when some file is removed in the template, space isn't freed in dom0. This means that template will use about twice a space that is really need after upgrade.</p>
+<p>You can compact root.img in the &quot;old way&quot;: Start the template, fill all the free space with zeros, for example with:</p>
+<pre class="wiki"><code>dd if=/dev/zero of=/var/tmp/zero
+(wait for &quot;No space left on device&quot; error)
+rm -f /var/tmp/zero</code></pre>
+<p>Then shutdown template and all VMs based on it. Go into template directory in dom0 (/var/lib/qubes/vm-templates/fedora-20-x64 or so) and issue:</p>
+<pre class="wiki"><code>cp --sparse=always root.img root.img.new
+mv root.img.new root.img</code></pre>
+<p>Done.</p>
