--- a/HCL.html
+++ b/HCL.html
@@ -207,6 +207,12 @@
 <p>Yes</p>
 <p>No</p>
 <p><a href="/trac/ticket/762">#762</a></p>
+<p>EVGA_E685<br /> (LGA1150; Z68; BIOS 4.6.4)</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Problems with Audio</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/wSCL-4VL2Ew/cU8-2qyT008J">​jeff</a></p>
 <p>Gigabyte GA-X79S-UP5 Wi-Fi<br /> (LGA2011; C606; BIOS 1.0)</p>
 <p>Yes</p>
 <p>Yes</p>
