--- a/HCL.html
+++ b/HCL.html
@@ -104,6 +104,13 @@
 <p>Yes</p>
 <p>No</p>
 <p>Qubes core developers</p>
+<p>Lenovo Thinkpad T410<br /> (i7-620M; Arrandale; HD graphics, BIOS 6IET74WW (1.34 ))</p>
+<p>*</p>
+<p>No</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/WsHQ_GqXdT4/63xtC0iqXXEJ">​Vincent Penquerc'h</a></p>
 <p>Lenovo Thinkpad T420s<br /> (i5-2520M; Sandy Bridge; Intel HD graphics)</p>
 <p>Yes</p>
 <p>Yes</p>
