--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -23,4 +23,5 @@
 <h2 id="a2014">2014</h2>
 <ul>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/XgTo6L8-5XA/JLOadvBqnqMJ">​Qubes Security Bulletin #9</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/VO1URqYWbok/8vp-VnE7iXEJ">​Qubes Security Bulletin #10</a></li>
 </ul>
