--- a/HCL.html
+++ b/HCL.html
@@ -137,6 +137,26 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/5tNavg4MhT4/dFXsYHXOgu4J">​Matt Tracy</a></p>
+<p>Lenovo X1 Carbon Gen 2<br /> (i5-4300U; Haswell-ULT; HD4000; BIOS 1.07)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p>No</p>
+<p>needs iwl7260-firmware in netvm</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/cu_mJa4iDHk/v1FdT3ZGofEJ">​Patrick Schless</a></p>
+<p>Lenovo X1 Carbon Gen 2<br /> (i7-4600U; Haswell-ULT; HD4000; BIOS 1.11)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>needs iwl7260-firmware in netvm</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/cu_mJa4iDHk/v1FdT3ZGofEJ">​Jean-François Rioux</a></p>
+<p>MSI GX660<br /> (i5-460M; PM55; Radeon HD5870; BIOS E16F1IMS VER1.0L)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/UrWYjkHwon8/TPE0XSBiPDQJ">​Avant Garden</a></p>
 <p>Samsung NP300E7A<br /> (i3-2330M; HM65; HD3000)</p>
 <p>Yes</p>
 <p>Yes</p>
