--- a/UserDoc/ConfigFiles.html
+++ b/UserDoc/ConfigFiles.html
@@ -7,5 +7,6 @@ rm -rf /var/lib/bluetooth
 ln -s /rw/config/var-lib-bluetooth /var/lib/bluetooth</code></pre></li>
 <li><code>/rw/config/qubes-ip-change-hook</code> - script run in NetVM after external IP change (or connection to the network)</li>
 <li><code>/rw/config/qubes-firewall-user-script</code> - script run in ProxyVM after firewall update. Good place to write own custom firewall rules</li>
+<li><code>/rw/config/suspend-module-blacklist</code> - list of modules (one per line) to be unloaded before system going to sleep. The file is used only in VM with some PCI devices attached. Supposed to be used for problematic device drivers.</li>
 </ul>
 <p>Note that scripts need to be executable (chmod +x) to be used.</p>
