--- a/FedoraTemplateUpgrade.html
+++ b/FedoraTemplateUpgrade.html
@@ -3,7 +3,7 @@
 <h2 id="UpgradingFedora18toFedora20">Upgrading Fedora 18 to Fedora 20</h2>
 <p>Commands to run in dom0 console (you can do the same from Qubes Manager):</p>
 <pre class="wiki"><code>qvm-clone fedora-18-x64 fedora-20-x64
-qvm-run -a fedora-20-x64</code></pre>
+qvm-run -a fedora-20-x64 gnome-terminal</code></pre>
 <p>Commands to run in new fedora-20-x64 template:</p>
 <pre class="wiki"><code>sudo yum --releasever=20 distro-sync
 poweroff</code></pre>
