--- a/UserDoc.html
+++ b/UserDoc.html
@@ -16,7 +16,7 @@
 <li><a href="/wiki/wiki/BackupRestore">Qubes Backup, Restoration, and Migration</a></li>
 <li><a href="/wiki/wiki/NetworkPrinter">Configuring a Network Printer</a></li>
 <li><a href="/wiki/wiki/ResizeDiskImage">Resizing AppVM and HVM Disk Images</a></li>
-<li><a href="/wiki/wiki/ManagingAppVmShortcuts">Managing Shortcuts to Applications Installed in AppVms</a></li>
+<li><a href="/wiki/wiki/ManagingAppVmShortcuts">Managing Shortcuts to Applications Installed in AppVMs</a></li>
 </ul>
 <h2 id="AdvancedTopics">Advanced Topics</h2>
 <ul>
