--- a/HCL.html
+++ b/HCL.html
@@ -123,6 +123,13 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ll_pPP7glwI/jtRbKtQO_rMJ">​cprise</a></p>
+<p>Lenovo Thinkpad T500<br /> (P8400; GM45; GMA 4500MHD; BIOS 6FET92WW 3.22)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>activated VT-d BIOS option not recognized in Qubes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/EoG4VffajRw/-oeSfNCA-KIJ">​Jens Porup</a></p>
 <p>Lenovo Thinkpad T510<br /> (i5-520M; Arrandale; Intel HD Graphics; BIOS 6MET92WW 1.52)</p>
 <p>*</p>
 <p>No</p>
