--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -6,6 +6,14 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
+<li><a href="http://">​Qubes-R2-rc1-x86_64-DVD.iso</a> (coming soon)</li>
+<li><a href="http://">​Digital Signature</a> (coming soon)</li>
+</ul>
+<ul>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2RC1">Installation Guide for Qubes R2 rc1?</a></strong></li>
+<li>Upgrading to Qubes R2 rc1</li>
+</ul>
+<ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta3-x86_64-DVD.iso/download">​Qubes-R2-Beta3-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://burnbit.com/torrent/266365/Qubes_R2_Beta3_x86_64_DVD_iso">​Qubes-R2-Beta3-x86_64-DVD.iso</a> (torrent)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta3-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
