--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -21,4 +21,5 @@
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
 <li>Alexander Tereshkin <code>alex at invisiblethingslab dot com</code> - core windows (Qubes Windows Tools)</li>
+<li>Rafał Wojdyła <code>omeg at invisiblethingslab dot com</code> - currently main developer for Qubes Windows Tools (core, gui agent)</li>
 </ul>
