--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -23,3 +23,7 @@
 <li>Alexander Tereshkin <code>alex at invisiblethingslab dot com</code> - core windows (Qubes Windows Tools)</li>
 <li>Rafał Wojdyła <code>omeg at invisiblethingslab dot com</code> - currently main developer for Qubes Windows Tools (core, gui agent)</li>
 </ul>
+<h2 id="Wikidocumentationeditors">Wiki/documentation editors</h2>
+<ul>
+<li>TODO</li>
+</ul>
