--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -16,7 +16,7 @@
 <li>Olivier Médoc <code>o_medoc at yahoo.fr</code> - core and gui fixes, template builder generalization (Arch Linux support)</li>
 <li>Timo Juhani Lindfors <code>timo.lindfors at iki.fi</code> - minor core cleanups</li>
 <li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
-<li>Zrubecz Laszlo <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scritps</li>
+<li>Zrubecz Laszlo <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
 </ul>
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
@@ -25,5 +25,5 @@
 </ul>
 <h2 id="Wikidocumentationeditors">Wiki/documentation editors</h2>
 <ul>
-<li>TODO</li>
+<li>Hakisho Nukama <code>nukama at gmail dot com</code> - various wiki contributions (ZFS, HCL)</li>
 </ul>
