--- a/HCL.html
+++ b/HCL.html
@@ -123,6 +123,13 @@
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/Ll_pPP7glwI/jtRbKtQO_rMJ">​cprise</a></p>
+<p>Lenovo Thinkpad T440p<br /> (i7-4800MQ; Haswell; Intel HD graphics; BIOS 2.21)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>802.11 ac doesn't work with Fedora 18, but with Fedora 20</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/r6kC4YHgDjM/yJXpvIdoWkUJ">​7v5w7go9ub0o</a></p>
 <p>Lenovo Thinkpad T500<br /> (P8400; GM45; GMA 4500MHD; BIOS 6FET92WW 3.22)</p>
 <p>Yes</p>
 <p>Yes</p>
