--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -26,4 +26,5 @@
 <h2 id="Wikidocumentationeditors">Wiki/documentation editors</h2>
 <ul>
 <li>Hakisho Nukama <code>nukama at gmail dot com</code> - various wiki contributions (ZFS, HCL)</li>
+<li>Axon <code>axon at openmailbox dot org</code> - various wiki edits</li>
 </ul>
