--- a/UpgradeToR2rc1.html
+++ b/UpgradeToR2rc1.html
@@ -3,8 +3,14 @@
 <p>Current Qubes R2 Beta 3 (R2B3) systems can be upgraded in-place to the latest R2 rc1 (R2rc1) release by following the procedure below.</p>
 <p><strong>Before attempting either an in-place upgrade or a clean installation, we strongly recommend that users back up the system by using the built-in <a href="/wiki/wiki/BackupRestore">backup tool</a>.</strong></p>
 <h2 id="UpgradeTemplateandStandaloneVMs">Upgrade Template and Standalone VM(s)</h2>
-<p>By default, in Qubes R2, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. More information on using multiple Template VMs, as well as Standalone VMs, can be found <a href="/wiki/wiki/SoftwareUpdateVM">here</a>.</p>
-<p>Qubes R2 rc1 comes with new template based on Fedora 20. You can upgrade existing template according to procedure described <a href="/wiki/wiki/FedoraTemplateUpgrade">here</a>. While technically it is possible to use old Fedora 18 template on R2 rc1, it is strongly recommended to upgrade all the Template VMs and Standalone VMs, because Fedora 18 no longer receive security updates.</p>
+<ul>
+<li>Qubes R2 rc1 comes with new template based on Fedora 20. You can upgrade existing template according to procedure described <a href="/wiki/wiki/FedoraTemplateUpgrade">here</a>.</li>
+</ul>
+<ul>
+<li><strong>It also possible to download a new Fedora 20-based template from our repositories</strong>. To do this please first upgrade the Dom0 distro as described in the section below.</li>
+</ul>
+<p>While technically it is possible to use old Fedora 18 template on R2 rc1, it is strongly recommended to upgrade all the Template VMs and Standalone VMs, because Fedora 18 no longer receive security updates.</p>
+<p>By default, in Qubes R2, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. If more than one template and/or Standalone VMs are used, then it is recommended to upgrade/replace all of them. More information on using multiple Template VMs, as well as Standalone VMs, can be found <a href="/wiki/wiki/SoftwareUpdateVM">here</a>.</p>
 <h2 id="Upgradingdom0">Upgrading dom0</h2>
 <p>Note that dom0 in R2rc1 is based on Fedora 20, in contrast to Fedora 18 in previous release, so this operation will upgrade a lot of packages.</p>
 <ol>
@@ -18,12 +24,14 @@
 <ol start="3">
 <li>Upgrade dom0 to R2 rc1:</li>
 </ol>
-<p>Note: be sure that the VM used as a update-downloading-vm (by default its the firewallvm based on the default template) has been updated to the latest qubes packages, specifically <code>qubes-core-vm</code> version &gt;= 2.1.31.</p>
+<p>Note: be sure that the VM used as a update-downloading-vm (by default its the firewallvm based on the default template) has been updated to the latest qubes packages, specifically <code>qubes-core-vm-2.1.31</code> or later. This doesn't imply that the VM must already be upgraded to fc20 -- for Dom0 upgrade we could still use an fc18-based VM (updatevm) it is only important to install the latest Qubes packages there.</p>
 <pre class="wiki"><code>sudo qubes-dom0-update qubes-dom0-dist-upgrade
 sudo qubes-dom0-update</code></pre>
 <ol start="4">
-<li>If above step completed successfully you should have <code>qubes-release-2-8</code> or later. If not, repeat above step with additional <code>--clean</code> option.</li>
+<li>If above step completed successfully you should have <code>qubes-release-2-9</code> or later. If not, repeat above step with additional <code>--clean</code> option.</li>
 </ol>
+<p>4a. If you chose not to upgrade your fc18 templates, but instead to download our new fc20-based template you should now be able to do that by simply typing:</p>
+<pre class="wiki"><code>sudo qubes-dom0-update qubes-template-fedora-20-x64</code></pre>
 <ol start="5">
 <li>Reboot the system.</li>
 </ol>
