--- a/UpgradeToR2rc1.html
+++ b/UpgradeToR2rc1.html
@@ -1,4 +1,3 @@
-<h1 id="DRAFT"><strong>DRAFT</strong></h1>
 <h1 id="UpgradingQubesR2Beta3toR2rc1">Upgrading Qubes R2 Beta 3 to R2 rc1</h1>
 <p>Current Qubes R2 Beta 3 (R2B3) systems can be upgraded in-place to the latest R2 rc1 (R2rc1) release by following the procedure below.</p>
 <p><strong>Before attempting either an in-place upgrade or a clean installation, we strongly recommend that users back up the system by using the built-in <a href="/wiki/wiki/BackupRestore">backup tool</a>.</strong></p>
@@ -20,6 +19,8 @@
 <li><p>Install all the updates for Dom0:</p>
 <pre class="wiki"><code>sudo qubes-dom0-update</code></pre></li>
 </ol>
+<p><strong>NOTE to qubes-testers</strong>: for the time being please use the current-testing repo for this step:</p>
+<pre class="wiki"><code>sudo qubes-dom0-update --enablerepo=qubes-dom0-r2b3-current-testing</code></pre>
 <p>After this step you should have <code>qubes-release-2-5</code> in your Dom0. Important: if you happen to have <code>qubes-release-2-6*</code> then you should downgrade to <code>qubes-release-2-5</code>! The <code>qubes-release-2-6*</code> packages have been uploaded to the testing repos and were kept there for a few hours, until we realized they bring incorrect repo definitions and so we removed them and also have changed the update procedure a bit (simplifying it).</p>
 <ol start="3">
 <li>Upgrade dom0 to R2 rc1:</li>
