--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -17,6 +17,7 @@
 <li>Timo Juhani Lindfors <code>timo.lindfors at iki.fi</code> - minor core cleanups</li>
 <li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
 <li>Zrubecz Laszlo <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
+<li>Vincent Penquerc'h <code>vincent.penquerch@collabora.co.uk</code> -- code review, misc fixes</li>
 </ul>
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
