--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -10,7 +10,7 @@
 <li><a href="http://">​Digital Signature</a> (coming soon)</li>
 </ul>
 <ul>
-<li><strong><a href="/wiki/wiki/InstallationGuideR2RC1">Installation Guide for Qubes R2 rc1?</a></strong></li>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2rc1">Installation Guide for Qubes R2 rc1</a></strong></li>
 <li>Upgrading to Qubes R2 rc1</li>
 </ul>
 <ul>
