--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -11,7 +11,7 @@
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2rc1">Installation Guide for Qubes R2 rc1</a></strong></li>
-<li>Upgrading to Qubes R2 rc1</li>
+<li><a href="/wiki/wiki/UpgradeToR2rc1">Upgrading to Qubes R2 rc1</a></li>
 </ul>
 <ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta3-x86_64-DVD.iso/download">​Qubes-R2-Beta3-x86_64-DVD.iso</a> (via sourceforge.net)</li>
