--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -6,8 +6,8 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
-<li><a href="http://">​Qubes-R2-rc1-x86_64-DVD.iso</a> (coming soon)</li>
-<li><a href="http://">​Digital Signature</a> (coming soon)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc1-x86_64-DVD.iso/download">​Qubes-R2-rc1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-rc1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2rc1">Installation Guide for Qubes R2 rc1</a></strong></li>
