--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -14,6 +14,7 @@
 <li><a href="/wiki/wiki/UpgradeToR2rc1">Upgrading to Qubes R2 rc1</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
+<p>(This is mainly for historical reference, we strongly recommend Qubes R2rc1 above)</p>
 <ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso/download">​Qubes-R1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
