--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -29,6 +29,18 @@ gpg:               imported: 1  (RSA: 1)</code></pre>
 <p>You can also download all the currently used developers' keys (and also a copy of the Master Key) in the keys directory on our server:</p>
 <p><a href="http://keys.qubes-os.org/keys/">​http://keys.qubes-os.org/keys/</a></p>
 <p>The developer keys are set to be valid for 1 year only, while the Qubes Master Signing Key has no expiration date. This latter key was generated and is kept only within a dedicated, air-gapped &quot;vault&quot; machine, and the private portion will (hopefully) never leave this isolated machine.</p>
+<p>You can now verify the ISO matches its signature:</p>
+<pre class="wiki"><code>$ gpg --verify Qubes-R2-rc1-x86_64-DVD.iso{.asc,}
+gpg: Signature made Sun 20 Apr 2014 10:06:13 BST using RSA key ID 0A40E458
+gpg: Good signature from &quot;Qubes OS Release 2 Signing Key&quot;</code></pre>
+<p>The key used to sign this ISO should be signed by the Qubes master key:</p>
+<pre class="wiki"><code>$ gpg --list-sig 0A40E458
+pub   4096R/0A40E458 2012-11-15
+uid                  Qubes OS Release 2 Signing Key
+sig          26CA2CD7 2013-02-26  [User ID not found]
+sig          C55BCFE3 2014-02-20  [User ID not found]
+sig          36879494 2012-11-15  Qubes Master Signing Key
+sig 3        0A40E458 2012-11-15  Qubes OS Release 2 Signing Key</code></pre>
 <p>Having problems verifying the ISO? See this thread:</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/4bdec1cd19509b38/9f8e219c41e1b232">​https://groups.google.com/group/qubes-devel/browse_thread/thread/4bdec1cd19509b38/9f8e219c41e1b232</a></p>
 <h2 id="VerifyingQubesCode">Verifying Qubes Code</h2>
